--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,20 @@ target_link_libraries(height_map_node
   ${PCL_LIBRARIES}
 )
 
+add_executable(local_height_map_node src/local_height_map_node.cpp)
+target_link_libraries(local_height_map_node
+  ${PROJECT_NAME}
+  ${catkin_LIBRARIES}
+  ${PCL_LIBRARIES}
+)
+
 install(TARGETS ${PROJECT_NAME} height_map_node
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
+
+install(TARGETS ${PROJECT_NAME} local_height_map_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
